--- a/sytle.css
+++ b/sytle.css
@@ -4,3 +4,33 @@
     position: relative;
     overflow: hidden;
 }
+
+.background {
+    background: rgb(50, 160, 240);
+    table-layout: fixed;
+    border-spacing: 0;
+}
+
+.background td {
+    padding: 0;
+}
+
+.lava {
+    background: rgb(255, 100, 100);
+}
+
+.wall {
+    background-color: white;
+}
+
+.actor {
+    position: absolute;
+}
+
+.coin {
+    background: rgb(240, 230, 90);
+}
+
+.player {
+    background: rgb(70,70,70);
+}
